<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings">

  <PreferenceCategory
      android:key="pref_instrument_category"
      android:title="@string/pref_instrument">

    <ListPreference
        android:defaultValue="@integer/def_instrument"
        android:dialogIcon="?attr/pref_instrument"
        android:entries="@array/pref_instrument_entries"
        android:entryValues="@array/pref_instrument_entry_values"
        android:icon="?attr/pref_instrument"
        android:key="pref_instrument"
        android:summary="@string/pref_instrument_summ"
        android:title="@string/pref_instrument" />

    <ListPreference
        android:defaultValue="@integer/def_key"
        android:dialogIcon="?attr/pref_key"
        android:entries="@array/pref_key_entries"
        android:entryValues="@array/pref_key_entry_values"
        android:icon="?attr/pref_key"
        android:key="pref_key"
        android:summary="@string/pref_key_summ"
        android:title="@string/pref_key" />

  </PreferenceCategory>

  <PreferenceCategory
      android:key="pref_layout_category"
      android:title="@string/pref_layout">

    <ListPreference
        android:defaultValue="@integer/def_layout"
        android:dialogIcon="?attr/pref_layout"
        android:entries="@array/pref_layout_entries"
        android:entryValues="@array/pref_layout_entry_values"
        android:icon="?attr/pref_layout"
        android:key="pref_layout"
        android:summary="@string/pref_layout_summ"
        android:title="@string/pref_layout" />

    <SwitchPreference
        android:defaultValue="false"
        android:icon="?attr/pref_reverse"
        android:key="pref_reverse"
        android:summary="@string/pref_reverse_summ"
        android:title="@string/pref_reverse" />

    <ListPreference
        android:defaultValue="@integer/def_fascia"
        android:dialogIcon="?attr/pref_fascia"
        android:entries="@array/pref_fascia_entries"
        android:entryValues="@array/pref_fascia_entry_values"
        android:icon="?attr/pref_fascia"
        android:key="pref_fascia"
        android:summary="@string/pref_fascia_summ"
        android:title="@string/pref_fascia" />

  </PreferenceCategory>

  <PreferenceCategory
      android:key="pref_theme_category"
      android:title="@string/theme">

    <ListPreference
        android:defaultValue="0"
        android:dialogIcon="?attr/pref_theme"
        android:entries="@array/pref_theme_entries"
        android:entryValues="@array/pref_theme_entry_values"
        android:icon="?attr/pref_theme"
        android:key="pref_theme"
        android:summary="@string/pref_theme_summ"
        android:title="@string/theme" />

  </PreferenceCategory>

  <PreferenceCategory
      android:key="pref_about_category"
      android:title="@string/pref_about">

    <org.billthefarmer.accordion.AboutPreference
        android:dialogIcon="?attr/pref_about"
        android:dialogLayout="@layout/about_dialog"
        android:icon="?attr/pref_about"
        android:key="pref_about"
        android:negativeButtonText=""
        android:summary="@string/pref_about_summ"
        android:title="@string/pref_about" />

  </PreferenceCategory>

</PreferenceScreen>
